tests/proc-macro-tests/tests/expand/fail/panicking_macro.err.txt
error: proc macro panicked
 --> /tests/expand/fail/panicking_macro.rs:5:5
  |
5 |     my_proc_macro_panics! { struct Test; }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: test
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
